--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "babel-plugin-styled-components": "^1.10.7",
     "bulma": "^0.7.2",
     "gatsby": "^2.0.76",
+    "gatsby-cli": "^2.9.0",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
@@ -18,6 +20,7 @@
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "node-sass": "^4.11.0",
@@ -25,7 +28,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-ga": "^2.5.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^5.0.1"
   },
   "keywords": [
     "gatsby"
