--- a/package.json
+++ b/package.json
@@ -5,32 +5,33 @@
   "version": "0.1.0",
   "author": "Steven Peng <hello@stevenpeng.com.au>",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "babel-plugin-styled-components": "^1.13.2",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "babel-plugin-styled-components": "^2.0.6",
     "bulma": "^0.9.3",
-    "gatsby": "^3.12.0",
-    "gatsby-cli": "^3.12.0",
+    "gatsby": "^4.8.1",
+    "gatsby-cli": "^4.8.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-manifest": "^3.12.0",
-    "gatsby-plugin-offline": "^4.12.0",
-    "gatsby-plugin-react-helmet": "^4.12.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-robots-txt": "^1.6.9",
-    "gatsby-plugin-sass": "^4.12.0",
-    "gatsby-plugin-sharp": "^3.12.0",
-    "gatsby-plugin-styled-components": "^4.12.0",
-    "gatsby-source-filesystem": "^3.12.0",
-    "gatsby-transformer-sharp": "^3.12.0",
-    "node-sass": "^6.0.1",
-    "prop-types": "^15.7.2",
+    "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-manifest": "^4.8.1",
+    "gatsby-plugin-offline": "^5.8.1",
+    "gatsby-plugin-react-helmet": "^5.8.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sass": "^5.8.0",
+    "gatsby-plugin-sharp": "^4.8.1",
+    "gatsby-plugin-styled-components": "^5.8.0",
+    "gatsby-source-filesystem": "^4.8.1",
+    "gatsby-transformer-sharp": "^4.8.0",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.3"
   },
   "keywords": [
     "gatsby"
@@ -44,6 +45,6 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
-    "prettier": "^2.3.2"
+    "prettier": "^2.5.1"
   }
 }
